# jenedai

./: .env  .env.example  .gitignore  README.md  README_Jenedai.md  README_avoir.md  config.yaml  main.py  mlflow.db  prefect.yaml  pyproject.toml
.github/scripts/: hf_create_spaces.py  hf_push_services.py  hf_update_secrets.py
.github/scripts/secrets/: secrets.example.json  setup_secrets.py
.github/workflows/: ci.yml
Services/: README_Services.md
Services/Garage_s3_FL/: clean_s3.sh  connect_s3.ipynb
Services/JupyterLab/workspace/notebooks/: ETLAddBucketToBdd.ipynb  Projet_Enedis_24_mars_2026.ipynb  TestVisualisationDonnees.ipynb
Services/JupyterLab/workspace/outputs/: evidently_report.html
Services/JupyterLab/workspace/utils/: data_loader.py  model.py
Services/MLflow/: Dockerfile
Services/MLflow_local/: restore_db.sh  start_MLflow.sh
Services/Streamlit/src/: streamlit_app.py
Services/Streamlit/src/.config/: external_services_config.json
docs/: api.txt  api_enedis.txt  data.txt  mlflow.txt
model_export/: MLmodel  conda.yaml  requirements.txt
notebook/: EDA.ipynb  exploration.ipynb  pipeline.ipynb  selection_variables.ipynb
notebook/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
ressources/: EDA.ipynb  Programming.ipynb  README.md  Use_Case_ML.ipynb  experiment.py  features_selection.ipynb  features_transformation.ipynb  inputer.py
src/jenedai/api/: Dockerfile  app.py  test_api.py
src/jenedai/api/scripts/: export_model.py
src/jenedai/ml/models/: README.md  correlation_jenedai.py  correlation_selector.py  data_caster_jenedai.py  data_transformer_jenedai.py  data_validator_jenedai.py  energy_predictor.py  evidently.py  evidently_monitoring.py  linear_regression.py  load_bdd_test.py  load_data_jenedai.py  ml_jenedai.py  model_performance.py  preprocess_training_data.py  stats_selector.py  stats_selector_jenedai.py  threshold_selector_jenedai.py
src/jenedai/ml/scripts/: README.md  README_evidently.md  README_flow_feature.md  README_predict.md  README_train.md  check_quality.py  constants.py  etl_flow.py  flow_feature_store.py  main.py  predict_flow.py  prefect_flow.py  send_email.py  test_predict.py  test_prefect.py  train.py  train_flow.py
src/jenedai/ml/utils/: get_console.py  logs.py  utils.py
tests/: test_load_bdd_task.py
(+11 files in other folders)
