[project]
name = "jenedai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.78",
    "ipython>=9.10.0",
    "mlflow>=1.27.0",
    "pandas>=3.0.1",
    "parquet>=1.3.1",
    "prefect>=3.6.23",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mypy>=1.19.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pre-commit>=4.5.1",
    "pyproject-runner>=0.3.0",
    "pyrefly>=0.48.0",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["src"]  # cherche les packages dans src/

[tool.uv.build-backend]
source-include = ["src/"]
where=["src"]

