[project]
name = "jenedai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosmtpd>=1.4.6",
    "boto3>=1.34",
    "entrypoints>=0.4",
    "evidently>=0.7.21",
    "huggingface-hub>=1.22.0",
    "importlib-metadata>=7.0",
    "ipython>=8.0",
    "mlflow>=2.14",
    "pandas>=2.0,<3",
    "prefect>=3.0",
    "protobuf>=4.25",        # drop the strict pin
    "psycopg2-binary>=2.9.12",
    "pyarrow>=15.0",         # realistic floor
    "requests>=2.32.5",
    "scikit-learn>=1.4",     # realistic floor
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pyproject-runner>=0.3.0",
    "pyrefly>=0.48.0",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["src"]  # cherche les packages dans src/

[tool.uv.build-backend]
source-include = ["src/"]
where=["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:evidently.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]  # erreurs, pyflakes, imports triés